--- a/app/src/main/res/layout/my_management_account.xml
+++ b/app/src/main/res/layout/my_management_account.xml
@@ -43,7 +43,7 @@
         android:padding="16dp">
 
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -86,116 +86,110 @@
                     android:textColor="#778899"
                     android:textSize="16sp" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="367dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:paddingVertical="5dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="393dp"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingVertical="5dp">
+        <!-- 编辑资料按钮 -->
+        <Button
+            android:id="@+id/edit_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_edit"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="编辑资料"
+            android:textSize="18sp" />
 
-            <!-- 编辑资料按钮 -->
-            <Button
-                android:id="@+id/edit_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_edit"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="编辑资料"
-                android:textSize="18sp" />
+        <!-- 离线翻译按钮 -->
+        <Button
+            android:id="@+id/offline_translation_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_download"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="离线翻译"
+            android:textSize="18sp" />
 
-            <!-- 离线翻译按钮 -->
-            <Button
-                android:id="@+id/offline_translation_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_download"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="离线翻译"
-                android:textSize="18sp" />
+        <!-- 隐私设置按钮 -->
+        <Button
+            android:id="@+id/privacy_settings_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_personalset"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="隐私设置"
+            android:textSize="18sp" />
 
-            <!-- 隐私设置按钮 -->
-            <Button
-                android:id="@+id/privacy_settings_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_personalset"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="隐私设置"
-                android:textSize="18sp" />
+        <!-- 选择语言按钮 -->
+        <Button
+            android:id="@+id/select_language_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_select"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="选择语言"
+            android:textSize="18sp" />
 
-            <!-- 选择语言按钮 -->
-            <Button
-                android:id="@+id/select_language_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_select"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="选择语言"
-                android:textSize="18sp" />
+        <!-- 投诉建议按钮 -->
+        <Button
+            android:id="@+id/feedback_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_feedback"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="投诉建议"
+            android:textSize="18sp" />
 
-            <!-- 投诉建议按钮 -->
-            <Button
-                android:id="@+id/feedback_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_feedback"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="投诉建议"
-                android:textSize="18sp" />
-
-            <!-- 退出账号按钮 -->
-            <Button
-                android:id="@+id/logout_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/button_background"
-                android:drawableLeft="@drawable/ic_exit"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                android:padding="8dp"
-                android:text="退出账号"
-                android:textSize="18sp" />
+        <!-- 退出账号按钮 -->
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background"
+            android:drawableLeft="@drawable/ic_exit"
+            android:drawableRight="@drawable/ic_to"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="退出账号"
+            android:textSize="18sp" />
 
 
-        </LinearLayout>
+    </LinearLayout>
 
 
         <!-- 底部导航栏 -->
@@ -203,9 +197,9 @@
         <LinearLayout
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="71dp"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="40dp"
             android:background="#EDEDED"
             android:orientation="horizontal"
             android:paddingVertical="8dp">
@@ -322,6 +316,6 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    </LinearLayout>
+
 
 
