--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <!-- 第一个布局文件的内容 -->
@@ -33,25 +33,14 @@
             android:background="#808080" />
     </LinearLayout>
 
-    <!-- 第二个布局文件的内容 -->
-    <!-- 底部导航栏 -->
 
+
+    <!-- 底部导航栏 -->
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/white"></androidx.cardview.widget.CardView>
-    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,44 +68,39 @@
         </LinearLayout>
 
 
-    <!-- 中间区域按钮 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+        <!-- 中间区域按钮 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/log_button"
-        style="?attr/borderlessButtonStyle"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:background="@drawable/custom_button_background"
-        android:drawablePadding="30dp"
-        android:stateListAnimator="@animator/button_elevation"
-        android:text="点击登录"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+            <Button
+                android:id="@+id/log_button"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:background="@drawable/custom_button_background"
+                android:drawablePadding="30dp"
+                android:stateListAnimator="@animator/button_elevation"
+                android:text="点击登录"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
+        </LinearLayout>
 
-
-</LinearLayout>
-
+    </LinearLayout>
 
 
     <LinearLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="320dp"
-        android:background="#ededed"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingVertical="5dp">
+        android:layout_marginTop="335dp"
+    android:background="#ededed"
+    android:orientation="horizontal"
+    android:paddingVertical="5dp">
 
         <!-- 首页按钮 -->
         <LinearLayout
@@ -233,4 +217,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
