--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -93,14 +93,16 @@
     </LinearLayout>
 
 
+    <!-- 底部导航栏 -->
     <LinearLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#ededed"
+        android:orientation="horizontal"
         android:layout_marginTop="335dp"
-    android:background="#ededed"
-    android:orientation="horizontal"
-    android:paddingVertical="5dp">
+        android:paddingVertical="5dp">
 
         <!-- 首页按钮 -->
         <LinearLayout
